[gd_scene load_steps=8 format=2]

[ext_resource path="res://Settings.gd" type="Script" id=1]
[ext_resource path="res://.import/Montserrat-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 2 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.180392, 0.0509804, 0.0509804, 1 )

[node name="Soundlevel" type="HSlider" parent="."]
margin_left = 999.0
margin_top = 353.0
margin_right = 1136.0
margin_bottom = 433.0
rect_scale = Vector2( 2, 2 )
value = 50.0
tick_count = 10

[node name="SFXlevel" type="HSlider" parent="."]
margin_left = 999.0
margin_top = 471.0
margin_right = 1136.0
margin_bottom = 513.0
rect_scale = Vector2( 2, 2 )
value = 50.0
tick_count = 10

[node name="Soundon" type="CheckBox" parent="."]
margin_left = 905.0
margin_top = 409.0
margin_right = 929.0
margin_bottom = 433.0
rect_scale = Vector2( 2, 2 )
pressed = true

[node name="SFXon" type="CheckBox" parent="."]
margin_left = 905.0
margin_top = 493.0
margin_right = 929.0
margin_bottom = 517.0
rect_scale = Vector2( 2, 2 )
pressed = true

[node name="Sound" type="Label" parent="."]
margin_left = 658.0
margin_top = 353.0
margin_right = 885.0
margin_bottom = 471.0
custom_fonts/font = SubResource( 1 )
text = "Sound"
align = 1
valign = 2

[node name="SFX" type="Label" parent="."]
margin_left = 718.0
margin_top = 471.0
margin_right = 878.0
margin_bottom = 555.0
custom_fonts/font = SubResource( 2 )
text = "SFX"

[node name="Back" type="Button" parent="."]
margin_left = 790.0
margin_top = 578.0
margin_right = 1091.0
margin_bottom = 707.0
custom_fonts/font = SubResource( 3 )
text = "BACK"

[node name="SFXValue" type="Label" parent="."]
margin_left = 1297.0
margin_top = 490.0
margin_right = 1375.0
margin_bottom = 557.0
custom_fonts/font = SubResource( 4 )
text = "50"

[node name="SoundValue" type="Label" parent="."]
margin_left = 1297.0
margin_top = 409.0
margin_right = 1409.0
margin_bottom = 490.0
custom_fonts/font = SubResource( 5 )
text = "50"

[connection signal="value_changed" from="Soundlevel" to="." method="_on_Soundlevel_value_changed"]
[connection signal="value_changed" from="SFXlevel" to="." method="_on_SFXlevel_value_changed"]
[connection signal="pressed" from="Back" to="." method="_on_Button_pressed"]
